# Ganchos

./: .gitignore  1  Ganchos Design.excalidraw  README.md
engine/: module_conf.json  package-lock.json  package.json  tslint.json
engine/src/: app.ts  commandLineArgs.ts  pluginExecution.ts
engine/src/EventListener/: eventListener.js  eventListener.ts
engine/src/PluginExecutor/: runPlugins.ts
engine/src/Plugins/: runPlugins.ts
engine/src/eventListener/: EventType.ts  eventListener.ts
engine/src/eventListeners/: fsEventListener.ts
engine/src/eventListening/: fsEventListener.ts  inetListener.ts  pluginEventDispatcher.ts
engine/src/eventProcessor/: pluginEventDispatcher.ts
engine/src/modules/: LoadedModule.ts  ModuleConfig.ts  moduleLoader.spec.ts  moduleLoader.ts
engine/src/pluginExecution/: ganchosPluginExecution.ts  pluginEventDispatcher.ts  pluginScheduleRunner.ts  pluginsFinder.ts  (+1 more)
modules/network/: Cargo.toml  commands
modules/network/src/: config.rs  event_loop.rs  filters.rs  main.rs  packet_handler.rs  packethandler.rs
modules/network/src/gmcp/: mod.rs
modules/network/src/gmcp/create/: mod.rs
modules/network/src/gmcp/event_loop/: mod.rs
modules/network/src/gmcp/read/: mod.rs
scripts/: install-hooks.sh  pre-push-tests.sh
shared/: package-lock.json  package.json  tsconfig.json  tslint.json
shared/src/: index.ts
test_plugins/: .test_addOrDelete.meta.swp  README.md  test_addOrDelete.js  test_addOrDelete.sh  test_inetChange.sh  test_inetUpDown.sh  test_schedule.sh  triggerFsEvents.js  triggerFsEvents.sh  verifyLogs.js
(+98 files in other folders)
