[package]
name = "network"
version = "0.1.0"
authors = ["isopolito <austinshall@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.25.0"
pnet_base = "0.25.0"
pnet_datalink = "0.25.0"
pnet_packet = "0.25.0"
chrono = "^0.4.19"
regex = "^1.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
lazy_static = "1.4.0"